<resources>
    <string name="app_name">ResumeBuilder</string>
    <string name="grade_score">CGPA/percentagee</string>
    <string name="school_university">School/University</string>
    <string name="course">course </string>
    <string name="year">Year</string>
    <string name="skills">Skills</string>
    <string name="CompanyName">CompanyName</string>
    <string name="Jobtitle">JobTitle</string>
    <string name="Duration">Duration</string>
    <string name="Details">Details</string>
</resources>