<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/course"
        android:layout_width="126dp"
        android:layout_height="26dp"
        android:text="@string/course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/grade"
        android:layout_width="125dp"
        android:layout_height="25dp"

        android:layout_marginTop="24dp"
        android:text="@string/grade_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/course" />

    <TextView
        android:id="@+id/school"
        android:layout_width="123dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/school_university"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grade" />

    <TextView
        android:id="@+id/year"
        android:layout_width="123dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/school" />


</androidx.constraintlayout.widget.ConstraintLayout>