<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/company"
        android:layout_width="126dp"
        android:layout_height="26dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/CompanyName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/job"
        android:layout_width="125dp"
        android:layout_height="25dp"


        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/Jobtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/company" />

    <TextView
        android:id="@+id/dur"
        android:layout_width="123dp"
        android:layout_height="28dp"

        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/Duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/job" />

    <TextView
        android:id="@+id/details"
        android:layout_width="123dp"
        android:layout_height="24dp"

        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/Details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dur" />


</androidx.constraintlayout.widget.ConstraintLayout>